--- a/index.html
+++ b/index.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+<!-- saved from url=(0038)http://127.0.0.1:5500/index.html#about -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
         <title>Exercice 1</title>
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <script src="./Exercice 1_files/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+        <link href="./Exercice 1_files/css" rel="stylesheet">
+        <link href="./Exercice 1_files/css(1)" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="index.css" rel="stylesheet" />
-    </head>
+        <link href="./Exercice 1_files/index.css" rel="stylesheet">
+    <style>.d-none {
+    display: none;
+}
+.invalid-feedback {
+    display: none;
+}
+.btn.disabled {
+    pointer-events: none;
+    opacity: 0.65;
+}</style></head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">Lounge chicha</a>
+                <a class="navbar-brand" href="http://127.0.0.1:5500/index.html#page-top">K-OPS</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Produits</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#Panier">Panier</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5500/index.html#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5500/index.html#projects">Produits</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5500/index.html#Panier">Panier</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5500/index.html#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html">Espace Client</a></li> <!-- Nouvelle ligne -->
+
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead" >
+        <header class="masthead">
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">K-ops Bar</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Lounge, bar à chicha</h2>
-                        <a class="btn btn-primary" href="#about">Get started</a>
+                        <a class="btn btn-primary" href="http://127.0.0.1:5500/index.html#about">Get started</a>
                     </div>
                 </div>
             </div>
@@ -50,15 +61,14 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4" id="welcom"></h2>
+                        <h2 class="alert alert-info" id="welcom"> Bonjour Madame null</h2>
                         <p class="text-white-50">
-                            Le K-ops bar est un bar a chicha située dans le centre de La Louvière, nous organisons des soirée chaque vendredi et nous vous offrons le meilleure service.
-                            Vous pouvez aussi commander des chichas et boissons pour que tout soit pret quand vous arriverez cependant vous devez payer en avnce.
-                            Nous vous attendons au K-ops bar.
+                            Le K-ops est une application de commande en ligne ou l'on peut acheter des boissons, snacks et accessoirs au prix les plus bas.
+
                         </p>
                     </div>
                 </div>
-                <div class="col-xl-8 col-lg-7"></div><img class="img-fluid mb-3 mb-lg-0" src="ipad.png" />
+                <div class="col-xl-8 col-lg-7"></div><img class="img-fluid mb-3 mb-lg-0" src="./Exercice 1_files/ipad.png">
             </div>
         </section>
         <!-- Projects-->
@@ -66,24 +76,24 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="istockphoto-1277521441-612x612.jpeg" alt="..."  style="width:630px;height:500px;" /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="./Exercice 1_files/Technologie.jpeg" alt="..." style="width:630px;height: 600px;"></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4><ol>Goût Chicha</ol></h4>
-                            <h5 class="text-black-50 mb-0"><ol>Menthe</ol><ol>Pomme-Menthe</ol><ol>Gum</ol><ol>Love</ol><ol>Mi amor</ol></h5>
+                            <h4><ol>Accessoirs</ol></h4>
+                            <h5 class="text-black-50 mb-0"><ol>Support téléphone</ol><ol>Brassart téléphone</ol><ol>MP3</ol><ol>Souris sans fil</ol><ol>Tapis souris</ol></h5>
                         </div>
                     </div>
                 </div>
                 <!-- Project One Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="images.jpeg" alt="..."  style="width:630px;height:500px;" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="./Exercice 1_files/images.jpeg" alt="..." style="width:630px;height:500px;"></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white"><ol>Boisson</ol></h4>
                                     <h5 class="mb-0 text-white-50"><ol>Eau plate</ol><ol>Eau pétillante</ol><ol>Coca-cola</ol><ol>Coca-zero</ol><ol>ice-tea pêche</ol><ol>Ice-tea pétillant</ol></h5>
-                                    <hr class="d-none d-lg-block mb-0 ms-0" />
+                                    <hr class="d-none d-lg-block mb-0 ms-0">
                                 </div>
                             </div>
                         </div>
@@ -91,14 +101,14 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="grey-goose-photo.jpeg" alt="..." style="width:630px;height:500px;"/></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="./Exercice 1_files/Snacks.jpeg" alt="..." style="width:630px;height:500px;"></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white"><ol>Alcool</ol></h4>
-                                    <h5 class="mb-0 text-white-50"><ol>Jack</ol><ol>Eristoft</ol><ol>Gin</ol><ol>Rhum</ol><ol>Biére</ol><ol>Desperados</ol></h5>
-                                    <hr class="d-none d-lg-block mb-0 me-0" />
+                                    <h4 class="text-white"><ol>Snacks</ol></h4>
+                                    <h5 class="mb-0 text-white-50"><ol>Chips italienne</ol><ol>Bonbon</ol><ol>maltesers</ol><ol></ol><ol>m&m's</ol><ol>Mars</ol></h5>
+                                    <hr class="d-none d-lg-block mb-0 me-0">
                                 </div>
                             </div>
                         </div>
@@ -106,13 +116,36 @@
                 </div>
             </div>
         </section>
+        <!-- Panier -->
+        <section class="panier-section text-center" id="panier">
+             <div class="container px-4 px-lg-5">
+                 <div class="row gx-4 gx-lg-5">
+                     <div class="col-lg-6">
+                     <h2 class="text-white mb-4">Votre panier</h2>
+                      <form action="#" method="post">
+                        <div class="form-floating mb-3">
+                        <input class="form-control" id="inputName" type="text" placeholder="Nom du produit..." />
+                        <label for="inputName">Nom du produit</label>
+                     </div>
+                      <div class="form-floating mb-3">
+                        <input class="form-control" id="inputQuantity" type="number" placeholder="Quantité..." />
+                        <label for="inputQuantity">Quantité</label>
+                    </div>
+                    <button class="btn btn-primary" type="submit">Ajouter au panier</button>
+                </form>
+            </div>
+            <div class="col-lg-6">
+                <img class="img-fluid" src="./Exercice 1_files/bg-masthead.jpg" alt="..." />
+            </div>
+        </div>
+    </div>
         <!-- Signup-->
         <section class="signup-section" id="signup">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">inscivez-vous</h2>
+                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
                         <!-- * * * * * * * * * * * * * * *-->
                         <!-- * * SB Forms Contact Form * *-->
                         <!-- * * * * * * * * * * * * * * *-->
@@ -123,8 +156,8 @@
                         <form class="form-signup" id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Email address input-->
                             <div class="row input-group-newsletter">
-                                <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>
-                                <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">S'inscrire</button></div>
+                                <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email"></div>
+                                <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
                             </div>
                             <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">An email is required.</div>
                             <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.</div>
@@ -136,7 +169,7 @@
                                 <div class="text-center mb-3 mt-2 text-white">
                                     <div class="fw-bolder">Form submission successful!</div>
                                     To activate this form, sign up at
-                                    <br />
+                                    <br>
                                     <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
                                 </div>
                             </div>
@@ -159,7 +192,7 @@
                             <div class="card-body text-center">
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
-                                <hr class="my-4 mx-auto" />
+                                <hr class="my-4 mx-auto">
                                 <div class="small text-black-50">4 Rue de Bouvy, 7100 La Louvière</div>
                             </div>
                         </div>
@@ -169,8 +202,8 @@
                             <div class="card-body text-center">
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">ririneri.1997@gmail.com</a></div>
+                                <hr class="my-4 mx-auto">
+                                <div class="small text-black-50"><a href="http://127.0.0.1:5500/index.html#!">ririneri.1997@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -179,33 +212,30 @@
                             <div class="card-body text-center">
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
-                                <hr class="my-4 mx-auto" />
+                                <hr class="my-4 mx-auto">
                                 <div class="small text-black-50">+32 491 75 44 63</div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="http://127.0.0.1:5500/index.html#!"><i class="fab fa-twitter"></i></a>
+                    <a class="mx-2" href="http://127.0.0.1:5500/index.html#!"><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="http://127.0.0.1:5500/index.html#!"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Your Website 2022</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright © Your Website 2022</div></footer>
         <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./Exercice 1_files/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="index2.js"></script>
+        <script src="./Exercice 1_files/index2.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <script src="./Exercice 1_files/sb-forms-latest.js"></script>
 
-        <script src="index.js"></script>
-    </body>
-
-
-</html>
+        <script src="./Exercice 1_files/index.js"></script>
+    </body></html>
